--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <nav   class="navbar cha">
             <div class="dropdown">
                 <div class="dropdown__select">
-                  <a  href="#home" class="dropdown__select ">Home  <i class="fa fa-caret-down dropdown__caret"></i></a>
-<!--                   <i class="fa fa-caret-down dropdown__caret"></i> -->
+                  <a  href="#home" class="dropdown__select ">Home</a>
+                  <i class="fa fa-caret-down dropdown__caret"></i>
                 </div>
               
               <ul class="dropdown__list">
